@@ -19,6 +19,7 @@
 	#include <string.h>
 	#include <float.h>
 	#include <math.h>
+	#include <algorithm>
 
 	#ifndef ASSERT
 		#define	ASSERT(exp)	{}
